@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-08T08:11:57Z",
-  "count_outdated" : 1795,
-  "uniques_outdated" : 120,
+  "timestamp" : "2022-08-08T16:10:17Z",
+  "count_outdated" : 1796,
+  "uniques_outdated" : 121,
   "count" : 1856,
   "uniques" : 129,
   "views" : [
-    {
-      "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 1,
