@@ -1,12 +1,7 @@
 {
-  "count": 61,
+  "count": 60,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-07-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-26T00:00:00Z",
       "count": 1,
